// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb renders using ajax-loaded object data (deep parent chain) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      >
        <ul
          key="breadcrumbs_0"
        >
          <li
            key="foo:0_0"
          >
            <Link
              to="/edit/object/foo:0"
            >
              <LinkAnchor
                href="/edit/object/foo:0"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:0"
                  onClick={[Function]}
                >
                  Fake Parent 0
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:1_0"
          >
            <Link
              to="/edit/object/foo:1"
            >
              <LinkAnchor
                href="/edit/object/foo:1"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1"
                  onClick={[Function]}
                >
                  Fake Parent 1
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:2_0"
          >
            <Link
              to="/edit/object/foo:2"
            >
              <LinkAnchor
                href="/edit/object/foo:2"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:2"
                  onClick={[Function]}
                >
                  Fake Parent 2
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:3_0"
          >
            <Link
              to="/edit/object/foo:3"
            >
              <LinkAnchor
                href="/edit/object/foo:3"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:3"
                  onClick={[Function]}
                >
                  Fake Parent 3
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:4_0"
          >
            <Link
              to="/edit/object/foo:4"
            >
              <LinkAnchor
                href="/edit/object/foo:4"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:4"
                  onClick={[Function]}
                >
                  Fake Parent 4
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:5_0"
          >
            <Link
              to="/edit/object/foo:5"
            >
              <LinkAnchor
                href="/edit/object/foo:5"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:5"
                  onClick={[Function]}
                >
                  Fake Parent 5
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:6_0"
          >
            <Link
              to="/edit/object/foo:6"
            >
              <LinkAnchor
                href="/edit/object/foo:6"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:6"
                  onClick={[Function]}
                >
                  Fake Parent 6
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:7_0"
          >
            <Link
              to="/edit/object/foo:7"
            >
              <LinkAnchor
                href="/edit/object/foo:7"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:7"
                  onClick={[Function]}
                >
                  Fake Parent 7
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:8_0"
          >
            <Link
              to="/edit/object/foo:8"
            >
              <LinkAnchor
                href="/edit/object/foo:8"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:8"
                  onClick={[Function]}
                >
                  Fake Parent 8
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:9_0"
          >
            <Link
              to="/edit/object/foo:9"
            >
              <LinkAnchor
                href="/edit/object/foo:9"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:9"
                  onClick={[Function]}
                >
                  Fake Parent 9
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:10_0"
          >
            <Link
              to="/edit/object/foo:10"
            >
              <LinkAnchor
                href="/edit/object/foo:10"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:10"
                  onClick={[Function]}
                >
                  Fake Parent 10
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:11_0"
          >
            <Link
              to="/edit/object/foo:11"
            >
              <LinkAnchor
                href="/edit/object/foo:11"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:11"
                  onClick={[Function]}
                >
                  Fake Parent 11
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:12_0"
          >
            <Link
              to="/edit/object/foo:12"
            >
              <LinkAnchor
                href="/edit/object/foo:12"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:12"
                  onClick={[Function]}
                >
                  Fake Parent 12
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:13_0"
          >
            <Link
              to="/edit/object/foo:13"
            >
              <LinkAnchor
                href="/edit/object/foo:13"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:13"
                  onClick={[Function]}
                >
                  Fake Parent 13
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:14_0"
          >
            <Link
              to="/edit/object/foo:14"
            >
              <LinkAnchor
                href="/edit/object/foo:14"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:14"
                  onClick={[Function]}
                >
                  Fake Parent 14
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </Breadcrumbs>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;

exports[`Breadcrumb renders using ajax-loaded object data (many parents) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      >
        <ul
          key="breadcrumbs_0"
        >
          <li
            key="foo:0_0"
          >
            <Link
              to="/edit/object/foo:0"
            >
              <LinkAnchor
                href="/edit/object/foo:0"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:0"
                  onClick={[Function]}
                >
                  Fake Parent 0
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_1"
        >
          <li
            key="foo:1_1"
          >
            <Link
              to="/edit/object/foo:1"
            >
              <LinkAnchor
                href="/edit/object/foo:1"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1"
                  onClick={[Function]}
                >
                  Fake Parent 1
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_2"
        >
          <li
            key="foo:2_2"
          >
            <Link
              to="/edit/object/foo:2"
            >
              <LinkAnchor
                href="/edit/object/foo:2"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:2"
                  onClick={[Function]}
                >
                  Fake Parent 2
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_3"
        >
          <li
            key="foo:3_3"
          >
            <Link
              to="/edit/object/foo:3"
            >
              <LinkAnchor
                href="/edit/object/foo:3"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:3"
                  onClick={[Function]}
                >
                  Fake Parent 3
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_4"
        >
          <li
            key="foo:4_4"
          >
            <Link
              to="/edit/object/foo:4"
            >
              <LinkAnchor
                href="/edit/object/foo:4"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:4"
                  onClick={[Function]}
                >
                  Fake Parent 4
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_5"
        >
          <li
            key="foo:5_5"
          >
            <Link
              to="/edit/object/foo:5"
            >
              <LinkAnchor
                href="/edit/object/foo:5"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:5"
                  onClick={[Function]}
                >
                  Fake Parent 5
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_6"
        >
          <li
            key="foo:6_6"
          >
            <Link
              to="/edit/object/foo:6"
            >
              <LinkAnchor
                href="/edit/object/foo:6"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:6"
                  onClick={[Function]}
                >
                  Fake Parent 6
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_7"
        >
          <li
            key="foo:7_7"
          >
            <Link
              to="/edit/object/foo:7"
            >
              <LinkAnchor
                href="/edit/object/foo:7"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:7"
                  onClick={[Function]}
                >
                  Fake Parent 7
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_8"
        >
          <li
            key="foo:8_8"
          >
            <Link
              to="/edit/object/foo:8"
            >
              <LinkAnchor
                href="/edit/object/foo:8"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:8"
                  onClick={[Function]}
                >
                  Fake Parent 8
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_9"
        >
          <li
            key="foo:9_9"
          >
            <Link
              to="/edit/object/foo:9"
            >
              <LinkAnchor
                href="/edit/object/foo:9"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:9"
                  onClick={[Function]}
                >
                  Fake Parent 9
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_10"
        >
          <li
            key="foo:10_10"
          >
            <Link
              to="/edit/object/foo:10"
            >
              <LinkAnchor
                href="/edit/object/foo:10"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:10"
                  onClick={[Function]}
                >
                  Fake Parent 10
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_11"
        >
          <li
            key="foo:11_11"
          >
            <Link
              to="/edit/object/foo:11"
            >
              <LinkAnchor
                href="/edit/object/foo:11"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:11"
                  onClick={[Function]}
                >
                  Fake Parent 11
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_12"
        >
          <li
            key="foo:12_12"
          >
            <Link
              to="/edit/object/foo:12"
            >
              <LinkAnchor
                href="/edit/object/foo:12"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:12"
                  onClick={[Function]}
                >
                  Fake Parent 12
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_13"
        >
          <li
            key="foo:13_13"
          >
            <Link
              to="/edit/object/foo:13"
            >
              <LinkAnchor
                href="/edit/object/foo:13"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:13"
                  onClick={[Function]}
                >
                  Fake Parent 13
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_14"
        >
          <li
            key="foo:14_14"
          >
            <Link
              to="/edit/object/foo:14"
            >
              <LinkAnchor
                href="/edit/object/foo:14"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:14"
                  onClick={[Function]}
                >
                  Fake Parent 14
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </Breadcrumbs>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;

exports[`Breadcrumb renders using ajax-loaded object data (multiple parents with common grandparent) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      >
        <ul
          key="breadcrumbs_0"
        >
          <li
            key="foo:1232_0"
          >
            <Link
              to="/edit/object/foo:1232"
            >
              <LinkAnchor
                href="/edit/object/foo:1232"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1232"
                  onClick={[Function]}
                >
                  Fake Grandparent
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:1233_0"
          >
            <Link
              to="/edit/object/foo:1233"
            >
              <LinkAnchor
                href="/edit/object/foo:1233"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1233"
                  onClick={[Function]}
                >
                  Fake Parent 1
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
        <ul
          key="breadcrumbs_1"
        >
          <li
            key="foo:1232_1"
          >
            <Link
              to="/edit/object/foo:1232"
            >
              <LinkAnchor
                href="/edit/object/foo:1232"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1232"
                  onClick={[Function]}
                >
                  Fake Grandparent
                </a>
              </LinkAnchor>
            </Link>
          </li>
          <li
            key="foo:1231_1"
          >
            <Link
              to="/edit/object/foo:1231"
            >
              <LinkAnchor
                href="/edit/object/foo:1231"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1231"
                  onClick={[Function]}
                >
                  Fake Parent 2
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </Breadcrumbs>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;

exports[`Breadcrumb renders using ajax-loaded object data (no parents) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      />
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;

exports[`Breadcrumb renders using ajax-loaded object data (simple case) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <FetchContextProvider>
      <Breadcrumbs
        pid="foo:1234"
      >
        <ul
          key="breadcrumbs_0"
        >
          <li
            key="foo:1233_0"
          >
            <Link
              to="/edit/object/foo:1233"
            >
              <LinkAnchor
                href="/edit/object/foo:1233"
                navigate={[Function]}
              >
                <a
                  href="/edit/object/foo:1233"
                  onClick={[Function]}
                >
                  Fake Parent
                </a>
              </LinkAnchor>
            </Link>
          </li>
        </ul>
      </Breadcrumbs>
    </FetchContextProvider>
  </Router>
</BrowserRouter>
`;
